# feature-eng

projects/: README.txt
proyectos/Whatsapp_wordcloud/: Whatsapp_wordcloud.ipynb
proyectos/seguridad_desarrollo/seguridadydesarrolloSON/: Makefile  README.md  pyproject.toml
proyectos/seguridad_desarrollo/seguridadydesarrolloSON/docs/: mkdocs.yml
proyectos/seguridad_desarrollo/seguridadydesarrolloSON/docs/docs/: index.md
