[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seguraridad_y_desarrollo_en_sonora"
version = "0.0.1"
description = "An\u00e1lisis de la seguridad y desarrollo econ\u00f3mico en los municipios de Sonora"
authors = [
  { name = "Esthefania Ortega, Joel Perez, Jose Cazares, Marcel Herrera" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["seguraridad_y_desarrollo_en_sonora"]
include = ["pyproject.toml", "seguraridad_y_desarrollo_en_sonora/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["seguraridad_y_desarrollo_en_sonora"]
force-sort-within-sections = true

